# queerly-optimistic-uploader

./: .gitignore  Cargo.toml  README.md
src/: build.rs  csv_record.rs  main.rs  queerly.slint
