[package]
name = "queerly-optimistic-uploader"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"
serde = { version = "1.0.197", features = ["derive"] }
csv = "1.3.0"
tokio = { version = "1.36.0", features = [
  "task",
  "macros",
  "io-std",
  "io-util",
] }
rfd = "0.14.1"
reqwest = { version = "0.12.0", features = ["json"] }
dirs = "5.0.1"
serde_json = "1.0.114"

[build-dependencies]
slint-build = "1.5.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
